Added negative scenarios

--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.trial.CreateTrialUsers_InvalidData.Name_splchars</td></tr>
+<tr><td>com.trial.CreateTrialUsers_InvalidData.InValidUserID_splchars</td></tr>
+<tr><td>com.trial.CreateTrialUsers_InvalidData.InValidUserID_string</td></tr>
 </table>
