--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\AdityaPrasad\Desktop\SeleniumScript\Automation\testng.xml</span>
+                    <span>C:\Users\AdityaPrasad\Desktop\SeleniumScript\Automation\testng1.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -112,6 +112,16 @@
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.trial.CreateTrialUsers" hash-for-method="CreateValidTrialUser">CreateValidTrialUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.trial.CreateTrialUsers_InvalidData" hash-for-method="Email_blank">Email_blank</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.trial.CreateTrialUsers_InvalidData" hash-for-method="Email_invalid">Email_invalid</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
                   </li>
                 </ul>
@@ -124,6 +134,28 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.trial.CreateTrialUsers_InvalidData</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="Email_blank">
+                  </a> <!-- Email_blank -->
+                  <span class="method-name">Email_blank</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Email_invalid">
+                  </a> <!-- Email_invalid -->
+                  <span class="method-name">Email_invalid</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -149,19 +181,17 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\AdityaPrasad\Desktop\SeleniumScript\Automation\testng.xml</span>
+            <span class="header-content">C:\Users\AdityaPrasad\Desktop\SeleniumScript\Automation\testng1.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot;&gt;
-  &lt;listeners&gt;
-    &lt;listener class-name=&quot;utilities.Listners&quot;/&gt;
-  &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.trial.CreateTrialUsers&quot;/&gt;
+      &lt;class name=&quot;com.trial.CreateTrialUsers_InvalidData&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -175,7 +205,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -201,20 +231,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'CreateValidTrialUser')
 data.setCell(0, 2, 'com.trial.CreateTrialUsers')
-data.setCell(0, 3, 5010);
+data.setCell(0, 3, 5527);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'CreateExistingTrialUser')
-data.setCell(1, 2, 'com.trial.CreateTrialUsers')
-data.setCell(1, 3, 1324);
+data.setCell(1, 1, 'Email_invalid')
+data.setCell(1, 2, 'com.trial.CreateTrialUsers_InvalidData')
+data.setCell(1, 3, 2860);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'CreateExistingTrialUser')
+data.setCell(2, 2, 'com.trial.CreateTrialUsers')
+data.setCell(2, 3, 1513);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'Email_blank')
+data.setCell(3, 2, 'com.trial.CreateTrialUsers_InvalidData')
+data.setCell(3, 3, 1239);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -229,9 +267,20 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.trial.CreateTrialUsers_InvalidData</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">Name_splchars</span>
+                <br/>
+                <span class="ignored-method-name">InValidUserID_splchars</span>
+                <br/>
+                <span class="ignored-method-name">InValidUserID_string</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Suite" class="panel">
@@ -247,7 +296,18 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">CreateExistingTrialUser</span>
-                <span class="method-start">5010 ms</span>
+                <span class="method-start">5532 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.trial.CreateTrialUsers_InvalidData</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">Email_blank</span>
+                <span class="method-start">7047 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Email_invalid</span>
+                <span class="method-start">8287 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
