--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6796d9">  <td>21/04/26 15:19:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateTrialUsers.CreateExistingTrialUser()[pri:2, instance:com.trial.CreateTrialUsers@5faeada1]">CreateExistingTrialUser</td> 
-  <td>main@447981768</td>   <td></td> </tr>
-<tr bgcolor="6796d9">  <td>21/04/26 15:19:15</td>   <td>-5010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateTrialUsers.CreateValidTrialUser()[pri:1, instance:com.trial.CreateTrialUsers@5faeada1]">CreateValidTrialUser</td> 
-  <td>main@447981768</td>   <td></td> </tr>
+<tr bgcolor="ea97a2">  <td>21/05/01 19:04:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateTrialUsers.CreateExistingTrialUser()[pri:2, instance:com.trial.CreateTrialUsers@23faf8f2]">CreateExistingTrialUser</td> 
+  <td>main@99451533</td>   <td></td> </tr>
+<tr bgcolor="ea97a2">  <td>21/05/01 19:04:50</td>   <td>-5533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateTrialUsers.CreateValidTrialUser()[pri:1, instance:com.trial.CreateTrialUsers@23faf8f2]">CreateValidTrialUser</td> 
+  <td>main@99451533</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>21/05/01 19:04:57</td>   <td>1515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateTrialUsers_InvalidData.Email_blank()[pri:6, instance:com.trial.CreateTrialUsers_InvalidData@2d6eabae]">Email_blank</td> 
+  <td>main@99451533</td>   <td></td> </tr>
+<tr bgcolor="958a8d">  <td>21/05/01 19:04:59</td>   <td>2755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateTrialUsers_InvalidData.Email_invalid()[pri:6, instance:com.trial.CreateTrialUsers_InvalidData@2d6eabae]">Email_invalid</td> 
+  <td>main@99451533</td>   <td></td> </tr>
 </table>
