--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,187</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,045</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.trial.CreateTrialUsers</td><td><a href="#m0">CreateExistingTrialUser</a></td><td rowspan="1">1619876096298</td><td rowspan="1">1513</td></tr><tr class="passedeven"><td><a href="#m1">CreateValidTrialUser</a></td><td rowspan="1">1619876090766</td><td rowspan="1">5527</td></tr><tr class="passedodd"><td rowspan="2">com.trial.CreateTrialUsers_InvalidData</td><td><a href="#m2">Email_blank</a></td><td rowspan="1">1619876097813</td><td rowspan="1">1239</td></tr><tr class="passedodd"><td><a href="#m3">Email_invalid</a></td><td rowspan="1">1619876099053</td><td rowspan="1">2860</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.trial.CreateTrialUsers</td><td><a href="#m0">CreateExistingTrialUser</a></td><td rowspan="1">1620808529340</td><td rowspan="1">1360</td></tr><tr class="passedeven"><td><a href="#m1">CreateValidTrialUser</a></td><td rowspan="1">1620808522686</td><td rowspan="1">6650</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.trial.CreateTrialUsers#CreateExistingTrialUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.trial.CreateTrialUsers#CreateExistingTrialUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.trial.CreateTrialUsers#CreateValidTrialUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.trial.CreateTrialUsers_InvalidData#Email_blank</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.trial.CreateTrialUsers_InvalidData#Email_invalid</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
