--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9fd9b">  <td>21/05/12 14:05:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateTrialUsers.CreateExistingTrialUser()[pri:2, instance:com.trial.CreateTrialUsers@1f7030a6]">CreateExistingTrialUser</td> 
-  <td>main@2011986105</td>   <td></td> </tr>
-<tr bgcolor="a9fd9b">  <td>21/05/12 14:05:22</td>   <td>-6655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateTrialUsers.CreateValidTrialUser()[pri:1, instance:com.trial.CreateTrialUsers@1f7030a6]">CreateValidTrialUser</td> 
-  <td>main@2011986105</td>   <td></td> </tr>
+<tr bgcolor="a9fd9b">  <td>21/05/25 10:55:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrder.createOrder()[pri:0, instance:com.userinvite.CreateOrder@4d41cee]">createOrder</td> 
+  <td>main@292917034</td>   <td></td> </tr>
 </table>
